feat: Correction des classes ( mauvaises pratiques et bug ) SonarCube